--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <section id="banner">
           <div class="container">
               <h1>Welcome to <strong>Carousel</strong></h1>
-              <p>A free template created by <a href="http://shelbymorganbell.com">Shelby Morgan Bell</a> </p>
+              <p>A template created by <a href="http://shelbymorganbell.com">Shelby Morgan Bell</a> </p>
               <ul class="actions">
           </div>
           </section>
