--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 <!-- Banner -->
           <section id="banner">
           <div class="container">
-              <h1>Welcome to <strong>Carousel</strong></h1>
+              <h1>Welcome to</h1>
+              <h2>Carousel</h2>
               <p>A template created by <a href="http://shelbymorganbell.com">Shelby Morgan Bell</a> </p>
               <ul class="actions">
           </div>
