--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="container">
               <h1>Welcome to</h1>
               <h2>Carousel</h2>
-              <p>A template created by <a href="http://shelbymorganbell.com">Shelby Morgan Bell</a> </p>
+              <p>A super simple template created by <a href="http://shelmorgan.io">Shel Morgan</a> </p>
               <ul class="actions">
           </div>
           </section>
